--- a/com.kubelt.lib.config.system.html
+++ b/com.kubelt.lib.config.system.html
@@ -34,8 +34,8 @@
 					<pre class="brush: clojure">(ns com.kubelt.lib.config.system
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.spec.config :as spec.config]
-   [com.kubelt.lib.config.default :as lib.config.default])
+   [com.kubelt.lib.config.default :as lib.config.default]
+   [com.kubelt.spec.config :as spec.config])
   (:require-macros
    [com.kubelt.spec :as kubelt.spec]))</pre>
 				</td>
@@ -53,18 +53,22 @@
 					
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn config [system-config options]
+					<pre class="brush: clojure">(defn config
+  [system-config options]
   &quot;Return an integrant system configuration map that combines a default
   configuration and a user-provided configuration options map.&quot;
   (-&gt;&gt; [[:log/level :log/level]
-        [:ipfs.read/multiaddr :ipfs.read/multiaddr]
+        [:app/name :app/name]
         [:ipfs.read/scheme :ipfs.read/scheme]
-        [:ipfs.write/multiaddr :ipfs.write/multiaddr]
+        [:ipfs.read/host :ipfs.read/host]
+        [:ipfs.read/port :ipfs.read/port]
         [:ipfs.write/scheme :ipfs.write/scheme]
+        [:ipfs.write/host :ipfs.write/host]
+        [:ipfs.write/port :ipfs.write/port]
+        [:p2p/scheme :p2p/scheme]
         [:p2p/port :p2p/port]
         [:p2p/host :p2p/host]
-        [:p2p/scheme :p2p/scheme]
-        [:p2p/multiaddr :p2p/multiaddr]
+        [:config/storage :config/storage]
         [:crypto/session :credential/jwt {}]
         [:crypto/wallet :crypto/wallet]]
        (reduce (fn [s [sys-kw opts-kw default]]
