--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
 								<td class="dep-version">1.15</td>
 							</tr>
 														<tr>
+								<td class="dep-name">tick/tick</td>
+								<td class="dotted">
+									<hr />
+								</td>
+								<td class="dep-version">Maven</td>
+								<td class="dep-version">0.4.32</td>
+							</tr>
+														<tr>
 								<td class="dep-name">hato/hato</td>
 								<td class="dotted">
 									<hr />
@@ -112,7 +120,7 @@
 									<hr />
 								</td>
 								<td class="dep-version">Maven</td>
-								<td class="dep-version">0.3.5</td>
+								<td class="dep-version">0.3.6</td>
 							</tr>
 														<tr>
 								<td class="dep-name">camel-snake-kebab/camel-snake-kebab</td>
@@ -369,6 +377,18 @@
 								<a href="com.kubelt.ddt.cmds.sdk.workspace.available.html">com.kubelt.ddt.cmds.sdk.workspace.available</a>
 							</li>
 							<li>
+								<a href="com.kubelt.ddt.cmds.storage.html">com.kubelt.ddt.cmds.storage</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.storage.create.html">com.kubelt.ddt.cmds.storage.create</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.storage.restore.html">com.kubelt.ddt.cmds.storage.restore</a>
+							</li>
+							<li>
+								<a href="com.kubelt.ddt.cmds.storage.store.html">com.kubelt.ddt.cmds.storage.store</a>
+							</li>
+							<li>
 								<a href="com.kubelt.ddt.cmds.wallet.html">com.kubelt.ddt.cmds.wallet</a>
 							</li>
 							<li>
@@ -591,6 +611,18 @@
 								<a href="com.kubelt.lib.rpc.html">com.kubelt.lib.rpc</a>
 							</li>
 							<li>
+								<a href="storage.cljc.html">storage.cljc</a>
+							</li>
+							<li>
+								<a href="com.kubelt.lib.storage.browser.html">com.kubelt.lib.storage.browser</a>
+							</li>
+							<li>
+								<a href="com.kubelt.lib.storage.jvm.html">com.kubelt.lib.storage.jvm</a>
+							</li>
+							<li>
+								<a href="com.kubelt.lib.storage.node.html">com.kubelt.lib.storage.node</a>
+							</li>
+							<li>
 								<a href="util.cljc.html">util.cljc</a>
 							</li>
 							<li>
@@ -799,6 +831,9 @@
 							</li>
 							<li>
 								<a href="com.kubelt.spec.rpc.schema.html">com.kubelt.spec.rpc.schema</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.storage.html">com.kubelt.spec.storage</a>
 							</li>
 							<li>
 								<a href="com.kubelt.spec.wallet.html">com.kubelt.spec.wallet</a>
