--- a/json.cljc.html
+++ b/json.cljc.html
@@ -110,7 +110,8 @@
 					<pre class="brush: clojure">(defn edn-&gt;json-str
   [x]
   #?(:clj (json/write-value-as-string x)
-     :cljs (js/JSON.stringify (clj-&gt;js x))))</pre>
+     :cljs (let [w (transit/writer :json-verbose)]
+             (transit/write w x))))</pre>
 				</td>
 			</tr>
 			<tr>
