--- a/com.kubelt.ddt.auth.html
+++ b/com.kubelt.ddt.auth.html
@@ -36,6 +36,7 @@
   (:require
    [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.lib.promise :as lib.promise]
+   [com.kubelt.lib.storage :as lib.storage]
    [com.kubelt.lib.wallet :as lib.wallet]
    [com.kubelt.sdk.v1 :as sdk]
    [com.kubelt.sdk.v1.core :as sdk.core]))</pre>
@@ -81,8 +82,12 @@
     (-&gt; (lib.wallet/load&amp; app-name wallet-name password)
         (lib.promise/then
          (fn [wallet]
-           (let [options (args-&gt;init-options args-map wallet)]
+           (let [options (args-&gt;init-options args-map wallet)
+                 address (:wallet/address wallet)]
              (-&gt; (sdk/init options)
+                 (lib.promise/catch
+                     (fn [e]
+                       (prn (:error e))))
                  (lib.promise/then
                   (fn [kbt]
                     (-&gt; (sdk.core/authenticate&amp; kbt)
@@ -93,10 +98,12 @@
                            (prn (ex-data e))))
                         (lib.promise/finally
                           (fn []
-                            (sdk/halt! kbt))))))
-                 (lib.promise/catch
-                  (fn [e]
-                    (println e))))))))))</pre>
+                            (sdk/halt! kbt))))))))))
+        ;; An error was thrown during (lib.wallet/load&amp;).
+        (lib.promise/catch
+            (fn [e]
+              (println (ex-message e))
+              (prn (ex-data e)))))))</pre>
 				</td>
 			</tr>
 			<tr>
