--- a/com.kubelt.sdk.v1.html
+++ b/com.kubelt.sdk.v1.html
@@ -77,7 +77,7 @@
    (init {}))
   ;; The 1-arity implementation expects a configuration map.
   ([config]
-   {:pre [(map? config)]}
+   {:pre [(map? config)] :post [(promise? %)]}
    ;; Check that the user-provided options map is valid. If not, an
    ;; error map is returned. Note that these configuration options are
    ;; not required, so we provide defaults for those values that aren't
@@ -163,7 +163,7 @@
 				<td class="codes">
 					<pre class="brush: clojure">(defn options
   [system]
-  {:pre [(map? system)]}
+  {:pre [(map? system)] :post [(promise? %)]}
   (lib.promise/promise
    (fn [resolve reject]
      (let [result (lib.config.sdk/options system)]
@@ -187,6 +187,99 @@
       (lib.promise/catch
           (fn [e]
             (clj-&gt;js e)))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>store</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Store the state of the system using the platform storage capability that was injected (or provided by default) during SDK initialization. We only care about preserving state that can't be recreated or are costly to recreate, e.g. JWTs. Returns a promise that resolves to a map of the stored state once complete.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn store&amp;
+  [system]
+  {:pre [(map? system)] :post [(promise? %)]}
+  (let [;; We'll store the options that were used to initialize the SDK
+        ;; so we can reinitialize a new instance.
+        init-options&amp; (options system)
+        ;; This function provides a platform specific means of storing
+        ;; a (small) data map.
+        store-fn (get-in system [:config/storage :storage/store-fn])
+        ;; Get the JWTs currently owned by the SDK instance.
+        vault (get system :crypto/session)]
+    ;; TODO move into library utility.
+    (-&gt; init-options&amp;
+        (lib.promise/then
+         (fn [options]
+           ;; Construct the state map to store.
+           (let [;; options can't include fns if we are to serialize it!
+                 options (-&gt; options
+                             (dissoc :config/storage)
+                             (dissoc :crypto/wallet))
+                 state {:options options :vault vault}]
+             ;; Returns a promise that resolves when the writing is
+             ;; finished.
+             (store-fn state)))))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Store the state of the system in a platform-specific way.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn store-js&amp;
+  [system]
+  {:pre [(map? system)] :post [(promise? %)]}
+  ;; We don't have any arguments to convert from JSON to edn, so we just
+  ;; invoke store&amp; directly.
+  (store&amp; system))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>restore</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn restore&amp;
+  [system]
+  {:pre [(map? system)] :post [(promise? %)]}
+  (let [;; This function provides a platform specific means of restoring
+        ;; a (small) data map.
+        restore-fn (get-in system [:config/storage :storage/restore-fn])
+        ;; Resolves to the data that has been restored.
+        restore&amp; (restore-fn)]
+    (-&gt; restore&amp;
+        (lib.promise/then
+         (fn [{:keys [options vault]}]
+           ;; TODO fold options back into system map?
+           (assoc system :crypto/session vault))))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Return a system map that has had saved state restored.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn restore-js&amp;
+  [system]
+  {:pre [(map? system)] :post [(promise? %)]}
+  ;; We don't have any arguments to convert from JSON to edn, so we just
+  ;; invoke restore&amp; directly.
+  (restore&amp; system))</pre>
 				</td>
 			</tr>
 			<tr>
