--- a/com.kubelt.spec.config.html
+++ b/com.kubelt.spec.config.html
@@ -37,6 +37,7 @@
    [malli.core :as m])
   (:require
    [com.kubelt.spec.http :as spec.http]
+   [com.kubelt.spec.storage :as spec.storage]
    [com.kubelt.spec.wallet :as spec.wallet]))</pre>
 				</td>
 			</tr>
@@ -69,6 +70,17 @@
 			</tr>
 			<tr>
 				<td class="docs">
+					<p>An application name, preferable reverse-TLD namespaced.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(def app-name
+  [:and
+   {:example &quot;com.example.foo-app&quot;}
+   :string])</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
 					
 				</td>
 				<td class="codes">
@@ -76,7 +88,7 @@
   [:and
    {:description &quot;A map from core name to JWT strings.&quot;
     :example {&quot;0x123abc&quot; &quot;&lt;header&gt;.&lt;payload&gt;.&lt;signature&gt;&quot;}}
-   ;; TODO flesh this out
+   ;; TODO flesh this out in com.kubelt.spec.jwt
    [:map-of :string :string]])</pre>
 				</td>
 			</tr>
@@ -97,6 +109,8 @@
   [:map {:closed true
          :title ::optional-sdk-config}
    [:log/level {:optional true} logging-level]
+   [:app/name {:optional true} app-name]
+   [:config/storage {:optional true} spec.storage/storage]
    [:credential/jwt {:optional true} credentials]
    [:crypto/wallet {:optional true} spec.wallet/wallet]
    [:ipfs.read/scheme {:optional true} spec.http/scheme]
@@ -116,10 +130,16 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(def sdk-config
-  (into [:map {:closed true
-               :title ::sdk-config}]
-        (map #(assoc-in % [1 :optional] false)
-             (m/-children (m/schema optional-sdk-config nil)))))</pre>
+  (let [;; These keys remain optional; if not provided by the user, we
+        ;; initialize their values to platform defaults in lib.init.
+        excluded-keys #{:config/storage :crypto/wallet}]
+    (into [:map {:closed true
+                 :title ::sdk-config}]
+          (map (fn [[k _ :as x]]
+                 (if-not (contains? excluded-keys k)
+                   (assoc-in x [1 :optional] false)
+                   x))
+               (m/-children (m/schema optional-sdk-config nil))))))</pre>
 				</td>
 			</tr>
 			<tr>
