--- a/storage.cljc.html
+++ b/storage.cljc.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.sdk</h1>
+							<h1 class="project-name">storage.cljc</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,19 +28,24 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Entry point for the Kubelt SDK.</p>
+					<p>Configuration storage.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.sdk
+					<pre class="brush: clojure">(ns com.kubelt.lib.storage
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.sdk.v1 :as sdk.v1]
-   [com.kubelt.sdk.v1.core :as sdk.v1.core]))</pre>
+   [malli.core :as malli])
+  (:require
+   [com.kubelt.spec.storage :as spec.storage])
+  (:require
+   #?@(:node [[com.kubelt.lib.storage.node :as storage.node]]
+       :browser [[com.kubelt.lib.storage.browser :as storage.browser]]
+       :jvm [[com.kubelt.lib.storage.jvm :as storage.jvm]])))</pre>
 				</td>
 			</tr>
 			<tr>
 				<td class="docs">
-					<h2>Entrypoint</h2>This is the entry point for the SDK.
+					<h2>storage?</h2>
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure"></pre>
@@ -48,7 +53,19 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>The SDK is intended to work in multiple contexts, including:</p><ul><li>ClojureScript applications</li><li>Node.js applications</li><li>Web applications</li></ul><p>Each of these values defined below are exposed by the generated library to enable access to the corresponding version of the API. The (init) function accepts configuration options and</p><p>To use the SDK from ClojureScript:</p><p>  (:require [com.kubelt.sdk.v1] :as sdk)   (def kbt (sdk/init {...})   (kbt/do-something)   (sdk/halt! kbt)</p><p>To use the SDK from a web application:</p><p>  TODO</p><p>To use the library from Node.js:</p><p>  const kbt = require("kubelt");   const sdk = kubelt.v1.init({...});   kbt.v1.workspace.available(sdk);   kbt.v1.halt(sdk);</p>
+					<p>Returns true if the given value is a map with a storage type tag, and false otherwise.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn storage?
+  [x]
+  (and
+   (map? x)
+   (= :kubelt.type/storage (get x :com.kubelt/type))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>valid?</h2>
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure"></pre>
@@ -56,35 +73,33 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					
+					<p>Return true if the given value conforms to the schema for a storage capabililty map, and false otherwise.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn web-v1
-  []
-  ;; TODO
-  (println &quot;web-v1&quot;))</pre>
+					<pre class="brush: clojure">(defn valid?
+  [x]
+  (malli/validate spec.storage/storage x))</pre>
 				</td>
 			</tr>
 			<tr>
 				<td class="docs">
-					
+					<h2>create</h2>TODO should we split into separate init/create calls?
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(def node-v1
-  #js {:init sdk.v1/init-js
-       :halt sdk.v1/halt-js!
-       :options sdk.v1/options-js
-       ;; storage
-       :store sdk.v1/store-js&amp;
-       :restore sdk.v1/restore-js&amp;
-       ;; core
-       :core #js {:authenticate sdk.v1.core/authenticate-js!
-                  :isLoggedIn sdk.v1.core/logged-in-js?
-                  :setWallet sdk.v1.core/set-wallet-js}
-       ;; development (removed from production builds)
-       ;; TODO
-       ;;:develop #js {:rpc #js {:call sdk.v1.develop.rpc/call-js!}}
-       })</pre>
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Create a platform-appropriate configuration storage. This initializes the storage and returns a wrapper that may be injected into the SDK init fn as a dependency to allow for SDK state to be stored and retrieved.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn create
+  [app-name]
+  {:pre [(string? app-name)]}
+  #?(:browser (storage.browser/create app-name)
+     :jvm (storage.jvm/create app-name)
+     :node (storage.node/create app-name)))</pre>
 				</td>
 			</tr>
 			<tr>
