--- a/com.kubelt.rpc.request.html
+++ b/com.kubelt.rpc.request.html
@@ -105,7 +105,7 @@
         ;; Collect parameters from the supplied parameter map, removing
         ;; any nil entries.
         params (filter some? (map #(get params %) all-params))]
-    (lib.json/edn-&gt;json-str
+    (lib.json/edn-&gt;json-forjs-str
      {:id request-id
       :jsonrpc rpc-version
       :method method-name
