--- a/index.html
+++ b/index.html
@@ -539,6 +539,12 @@
 								<a href="com.kubelt.lib.error.html">com.kubelt.lib.error</a>
 							</li>
 							<li>
+								<a href="com.kubelt.lib.gen.common.html">com.kubelt.lib.gen.common</a>
+							</li>
+							<li>
+								<a href="wallet.cljc.html">wallet.cljc</a>
+							</li>
+							<li>
 								<a href="http.cljc.html">http.cljc</a>
 							</li>
 							<li>
