deploy: 51585bceaf86e5996084dcb0015ca92c52b2249a

--- a/com.kubelt.kbt.html
+++ b/com.kubelt.kbt.html
@@ -36,8 +36,7 @@
   (:require
    [&quot;yargs&quot; :as yargs :refer [Yargs]])
   (:require
-   [clojure.set :as cset]
-   [clojure.string :as str])
+   [clojure.set :as cset])
   (:require
    [com.kubelt.kbt.cmds :as kbt.cmds]))</pre>
 				</td>
