--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
 								<td class="dep-version">1.15</td>
 							</tr>
 														<tr>
+								<td class="dep-name">org.clojure/tools.cli</td>
+								<td class="dotted">
+									<hr />
+								</td>
+								<td class="dep-version">Maven</td>
+								<td class="dep-version">1.0.206</td>
+							</tr>
+														<tr>
 								<td class="dep-name">tick/tick</td>
 								<td class="dotted">
 									<hr />
@@ -57,6 +65,30 @@
 								</td>
 								<td class="dep-version">Maven</td>
 								<td class="dep-version">0.8.2</td>
+							</tr>
+														<tr>
+								<td class="dep-name">com.cognitect/anomalies</td>
+								<td class="dotted">
+									<hr />
+								</td>
+								<td class="dep-version">Maven</td>
+								<td class="dep-version">0.1.12</td>
+							</tr>
+														<tr>
+								<td class="dep-name">com.cognitect/transit-cljs</td>
+								<td class="dotted">
+									<hr />
+								</td>
+								<td class="dep-version">Maven</td>
+								<td class="dep-version">0.8.269</td>
+							</tr>
+														<tr>
+								<td class="dep-name">fipp/fipp</td>
+								<td class="dotted">
+									<hr />
+								</td>
+								<td class="dep-version">Maven</td>
+								<td class="dep-version">0.6.26</td>
 							</tr>
 														<tr>
 								<td class="dep-name">integrant/integrant</td>
@@ -97,6 +129,14 @@
 								</td>
 								<td class="dep-version">Maven</td>
 								<td class="dep-version">1.0.329</td>
+							</tr>
+														<tr>
+								<td class="dep-name">funcool/promesa</td>
+								<td class="dotted">
+									<hr />
+								</td>
+								<td class="dep-version">Maven</td>
+								<td class="dep-version">8.0.450</td>
 							</tr>
 														<tr>
 								<td class="dep-name">com.rpl/specter</td>
@@ -154,6 +194,12 @@
 							<h3>namespaces</h3>
 						</a>
 						<ul>
+							<li>
+								<a href="build.command.html">build.command</a>
+							</li>
+							<li>
+								<a href="user.html">user</a>
+							</li>
 							<li>
 								<a href="com.kubelt.ddt.html">com.kubelt.ddt</a>
 							</li>
@@ -843,6 +889,147 @@
 							</li>
 							<li>
 								<a href="com.kubelt.spec.wallet.html">com.kubelt.spec.wallet</a>
+							</li>
+							<li>
+								<a href="com.kubelt.lib.test-utils.html">com.kubelt.lib.test-utils</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.auth-test.html">com.kubelt.rpc.auth-test</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.profile-test.html">com.kubelt.rpc.profile-test</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.schema-test.html">com.kubelt.rpc.schema-test</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.test-commons.html">com.kubelt.rpc.test-commons</a>
+							</li>
+							<li>
+								<a href="common_test.cljc.html">common_test.cljc</a>
+							</li>
+							<li>
+								<a href="core_test.cljc.html">core_test.cljc</a>
+							</li>
+							<li>
+								<a href="wallet_test.cljc.html">wallet_test.cljc</a>
+							</li>
+							<li>
+								<a href="util_test.cljc.html">util_test.cljc</a>
+							</li>
+							<li>
+								<a href="lib.bag.bag-test.html">lib.bag.bag-test</a>
+							</li>
+							<li>
+								<a href="lib.bag.dag-test.html">lib.bag.dag-test</a>
+							</li>
+							<li>
+								<a href="lib.bag.node-test.html">lib.bag.node-test</a>
+							</li>
+							<li>
+								<a href="base64_test.cljc.html">base64_test.cljc</a>
+							</li>
+							<li>
+								<a href="config_test.cljc.html">config_test.cljc</a>
+							</li>
+							<li>
+								<a href="digest_test.cljc.html">digest_test.cljc</a>
+							</li>
+							<li>
+								<a href="hexify_test.cljc.html">hexify_test.cljc</a>
+							</li>
+							<li>
+								<a href="keypair_test.cljc.html">keypair_test.cljc</a>
+							</li>
+							<li>
+								<a href="seed_test.cljc.html">seed_test.cljc</a>
+							</li>
+							<li>
+								<a href="request_test.cljc.html">request_test.cljc</a>
+							</li>
+							<li>
+								<a href="shared_test.cljc.html">shared_test.cljc</a>
+							</li>
+							<li>
+								<a href="lib.ipld-test.html">lib.ipld-test</a>
+							</li>
+							<li>
+								<a href="json_test.cljc.html">json_test.cljc</a>
+							</li>
+							<li>
+								<a href="jwt_test.cljc.html">jwt_test.cljc</a>
+							</li>
+							<li>
+								<a href="lib.key.key-test.html">lib.key.key-test</a>
+							</li>
+							<li>
+								<a href="uuid_test.cljc.html">uuid_test.cljc</a>
+							</li>
+							<li>
+								<a href="rdf.data-factory-test.html">rdf.data-factory-test</a>
+							</li>
+							<li>
+								<a href="rdf.jsonld-test.html">rdf.jsonld-test</a>
+							</li>
+							<li>
+								<a href="rdf.quad-test.html">rdf.quad-test</a>
+							</li>
+							<li>
+								<a href="dapp.components.button.html">dapp.components.button</a>
+							</li>
+							<li>
+								<a href="dapp.components.dashboard.cta.html">dapp.components.dashboard.cta</a>
+							</li>
+							<li>
+								<a href="dapp.components.dashboard.tile.html">dapp.components.dashboard.tile</a>
+							</li>
+							<li>
+								<a href="dapp.components.header.html">dapp.components.header</a>
+							</li>
+							<li>
+								<a href="dapp.components.layout.html">dapp.components.layout</a>
+							</li>
+							<li>
+								<a href="dapp.components.sidebar.html">dapp.components.sidebar</a>
+							</li>
+							<li>
+								<a href="dapp.components.web3-modal.html">dapp.components.web3-modal</a>
+							</li>
+							<li>
+								<a href="dapp.config.html">dapp.config</a>
+							</li>
+							<li>
+								<a href="dapp.core.html">dapp.core</a>
+							</li>
+							<li>
+								<a href="dapp.pages.apps.html">dapp.pages.apps</a>
+							</li>
+							<li>
+								<a href="dapp.pages.dashboard.html">dapp.pages.dashboard</a>
+							</li>
+							<li>
+								<a href="dapp.pages.reports.html">dapp.pages.reports</a>
+							</li>
+							<li>
+								<a href="dapp.routes.html">dapp.routes</a>
+							</li>
+							<li>
+								<a href="dapp.views.html">dapp.views</a>
+							</li>
+							<li>
+								<a href="dapp.wallet.html">dapp.wallet</a>
+							</li>
+							<li>
+								<a href="dapp.integration.auth-test.html">dapp.integration.auth-test</a>
+							</li>
+							<li>
+								<a href="dapp.integration.dashboard-test.html">dapp.integration.dashboard-test</a>
+							</li>
+							<li>
+								<a href="dapp.integration.test-utils.html">dapp.integration.test-utils</a>
+							</li>
+							<li>
+								<a href="dapp.sdk-test.html">dapp.sdk-test</a>
 							</li>
 						</ul>
 					</div>
