--- a/com.kubelt.sdk.v1.html
+++ b/com.kubelt.sdk.v1.html
@@ -37,10 +37,10 @@
    [malli.core :as m]
    [malli.error :as me])
   (:require
+   [com.kubelt.lib.config :as lib.config]
    [com.kubelt.lib.config.default :as lib.config.default]
    [com.kubelt.lib.config.sdk :as lib.config.sdk]
    [com.kubelt.lib.config.system :as lib.config.system]
-   [com.kubelt.lib.config.util :as lib.config.util]
    [com.kubelt.lib.error :as lib.error]
    [com.kubelt.lib.init :as lib.init]
    [com.kubelt.lib.promise :as lib.promise :refer [promise?]]
@@ -101,13 +101,13 @@
   ;; The 1-arity implementation uses expects a configuration object.
   ([config]
    {:pre [(object? config)] :post [(promise? %)]}
-   (let [config (lib.config.util/obj-&gt;map config)]
+   (let [config (lib.config/obj-&gt;map config)]
      (-&gt; (init config)
          ;; If an error occurred, convert the returned error map into an
          ;; JavaScript object.
          (lib.promise/catch
           (fn [e]
-            (clj-&gt;js e)))))))</pre>
+            (lib.promise/rejected (clj-&gt;js e))))))))</pre>
 				</td>
 			</tr>
 			<tr>
