deploy: 4d7278970badfb4c727ddc7822dfcd82e4b99d83

--- a/com.kubelt.lib.http.browser.html
+++ b/com.kubelt.lib.http.browser.html
@@ -59,25 +59,10 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					
+					<p>Request map example {:kubelt/type :kubelt.type/uri  :http/method method  :http/version version  :http/headers headers  :http/trailers trailers  :http/status status  :http/body body  :uri/scheme scheme  :uri/port port  :uri/path path  :uri/fragment fragment  :uri/query query  :uri/domain domain  :uri/user user}</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(comment
-  &quot;request map example&quot;
-  {:kubelt/type :kubelt.type/uri
-   :http/method method
-   :http/version version
-   :http/headers headers
-   :http/trailers trailers
-   :http/status status
-   :http/body body
-   :uri/scheme scheme
-   :uri/port port
-   :uri/path path
-   :uri/fragment fragment
-   :uri/query query
-   :uri/domain domain
-   :uri/user user})</pre>
+					<pre class="brush: clojure"></pre>
 				</td>
 			</tr>
 			<tr>
