--- a/request.cljc.html
+++ b/request.cljc.html
@@ -37,8 +37,6 @@
      (:require
       [goog.Uri]
       [goog.object]))
-  ;; NB: extra per-target reader conditionals are a shadow-cljs *only*
-  ;; feature.
   #?(:node
      (:require
       [&quot;stream&quot; :refer [Duplex]]
@@ -115,50 +113,10 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Convert a Node.js HTTP request (an IncomingMessage instance) into a data map of its component parts.</p><p>TODO convert to .cljc TODO test me</p>
+					<p>TODO convert to .cljc TODO test me<h1>?(:cljs</h1>    (defn req->map      "Convert a Node.js HTTP request (an IncomingMessage instance) into a   data map of its component parts."      [<sup>IncomingMessage</sup> req]      (let [method (keyword (str/lower-case (.-method req)))            version (.-httpVersion req)            headers (.-headers req)            trailers (.-trailers req)            status (.-statusCode req)            body "fixme"            ;; Extract data from the request URL.            req-url (goog.Uri. (.-url req))            req-host (goog.object/getValueByKeys req #js ["headers" "host"])            ;; Use the request's socket "encrypted" flag to determine            ;; whether the request was transmitted via TLS or not.            req-scheme (if (. ^Duplex (. req -socket) -encrypted) "https://" "http://")            req-base (goog.Uri. (str req-scheme req-host))            uri (goog.Uri.resolve req-base req-url)            ;; Extract components from the URI.            port (.getPort uri)            path (.getPath uri)            fragment (.getFragment uri)            ;; TODO turn into map (query-data->map)            ;;query-data (.getQueryData uri) -> goog.Uri.QueryData            query (.getDecodedQuery uri)            scheme (.getScheme uri)            domain (.getDomain uri)            user (.getUserInfo uri)]        {:kubelt/type :kubelt.type/uri         :http/method method         :http/version version         :http/headers headers         :http/trailers trailers         :http/status status         :http/body body         :uri/scheme scheme         :uri/port port         :uri/path path         :uri/fragment fragment         :uri/query query         :uri/domain domain         :uri/user user})))</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">#?(:cljs
-   (defn req-&gt;map
-     [^IncomingMessage req]
-     (let [method (keyword (str/lower-case (.-method req)))
-           version (.-httpVersion req)
-           headers (.-headers req)
-           trailers (.-trailers req)
-           status (.-statusCode req)
-           body &quot;fixme&quot;
-           ;; Extract data from the request URL.
-           req-url (goog.Uri. (.-url req))
-           req-host (goog.object/getValueByKeys req #js [&quot;headers&quot; &quot;host&quot;])
-           ;; Use the request's socket &quot;encrypted&quot; flag to determine we the
-           ;; request was transmitted via TLS or not.
-           req-scheme (if (. ^Duplex (. req -socket) -encrypted) &quot;https://&quot; &quot;http://&quot;)
-           req-base (goog.Uri. (str req-scheme req-host))
-           uri (goog.Uri.resolve req-base req-url)
-           ;; Extract components from the URI.
-           port (.getPort uri)
-           path (.getPath uri)
-           fragment (.getFragment uri)
-           ;; TODO turn into map (query-data-&gt;map)
-           ;;query-data (.getQueryData uri) -&gt; goog.Uri.QueryData
-           query (.getDecodedQuery uri)
-           scheme (.getScheme uri)
-           domain (.getDomain uri)
-           user (.getUserInfo uri)]
-       {:kubelt/type :kubelt.type/uri
-        :http/method method
-        :http/version version
-        :http/headers headers
-        :http/trailers trailers
-        :http/status status
-        :http/body body
-        :uri/scheme scheme
-        :uri/port port
-        :uri/path path
-        :uri/fragment fragment
-        :uri/query query
-        :uri/domain domain
-        :uri/user user})))</pre>
+					<pre class="brush: clojure"></pre>
 				</td>
 			</tr>
 			<tr>
