deploy: c051b08a52e335bc6889124cd3ee16c9951080d3

--- a/com.kubelt.lib.p2p.html
+++ b/com.kubelt.lib.p2p.html
@@ -34,8 +34,8 @@
 					<pre class="brush: clojure">(ns com.kubelt.lib.p2p
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [taoensso.timbre :as log]
-   [clojure.string :as cstr])
+   [clojure.string :as cstr]
+   [taoensso.timbre :as log])
   (:require
    [&quot;@ethersproject/providers&quot; :refer [JsonRpcProvider]]
    [com.kubelt.lib.error :as lib.error]
