--- a/com.kubelt.sdk.v1.core.html
+++ b/com.kubelt.sdk.v1.core.html
@@ -52,25 +52,22 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Create an account or authorize an existing account. User identity is centered around an wallet accounts and is also the name linked to the user's Kubelt application data (aka the 'me dag').</p><p>The public key from the wallet param must be available as a hex-encoded string along with the account id. These two pieces of information together kick off a zero-knowledge authentication request.</p><p>The decryption function stored in the wallet will be used to decrypt a nonce to complete the proof. Returns a promise that resolves to the updated system map containing the JWT for the system wallet core address, or is rejected with some information about the error that occurred.</p>
+					<p>Create an account or authorize an existing account. User identity is centered around an wallet accounts and is also the name linked to the user's Kubelt application data (via their private core).</p><p>The public key from the wallet param must be available as a hex-encoded string along with the account id. These two pieces of information together kick off an authentication request.</p><p>The signing function stored in the wallet is used to sign a nonce to complete the auth flow. Returns a promise that resolves to the updated system map containing the JWT for the system wallet core address, or is rejected with some information about the error that occurred.</p>
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn authenticate&amp;
   [sys]
   ;; TODO add an extra arity that allows a wallet to be passed in?
   ;; TODO validate system map (especially: ensure wallet is present)
-  ;; Send the public key and the account id to gateway
-  ;; API &quot;/@core/auth&quot;. This kicks off a zero-knowledge proof
-  ;; authentication.
   (let [core (get-in sys [:crypto/wallet :wallet/address])]
     (-&gt; (lib.p2p/authenticate! sys)
         (lib.promise/then
          (fn [auth-result]
            (if (lib.error/error? auth-result)
-                  ;; This triggers .catch handlers on returned promise.
+             ;; This triggers .catch handlers on returned promise.
              (throw (ex-info &quot;error&quot; auth-result))
-                  ;; We successfully retrieved a nonce, now verify it by signing
-                  ;; it and sending it back.
+             ;; We successfully retrieved a nonce, now verify it by signing
+             ;; it and sending it back.
              auth-result)))
         (lib.promise/then
          (fn [nonce]
@@ -79,29 +76,30 @@
              [nonce signature])))
         (lib.promise/then
          (fn [[nonce signature-p]]
-                ;; NB: the signature is expected to be a promise, even if
-                ;; not strictly necessary on some platforms.
+           ;; NB: the signature is expected to be a promise, even if
+           ;; not strictly necessary on some platforms.
            (lib.promise/then
             signature-p
             (fn [signature]
-                   ;; If successful we get back a JWT that needs to be stored
-                   ;; in the system map. NB: the JWT has an expiry and encodes
-                   ;; client IP to restrict renewing JWTs for other clients.
-                   ;; TODO check/assert that this is true.
+              ;; If successful we get back a JWT that needs to be stored
+              ;; in the system map. NB: the JWT has an expiry and encodes
+              ;; client IP to restrict renewing JWTs for other clients.
+              ;; TODO check/assert that this is true.
               (lib.promise/then
                (lib.p2p/verify! sys core nonce signature)
                (fn [verify-result]
                  (if (lib.error/error? verify-result)
-                        ;; This triggers .catch handlers on returned promise.
+                   ;; This triggers .catch handlers on returned promise.
                    (throw (ex-info &quot;error&quot; verify-result))
-                        ;; We successfully retrieved a nonce, now verify it by signing
-                        ;; it and sending it back.
+                   ;; We successfully retrieved a nonce, now verify it by signing
+                   ;; it and sending it back.
                    (let [decoded-jwt (lib.jwt/decode verify-result)]
-                          ;; TODO verify jwt
-                          ;; TODO once we are able to inject a
-                          ;; platform-specific storage capability, use that to
-                          ;; allow the SDK state (or possibly just a subset,
-                          ;; e.g. tokens) to be frozen and thawed back out
+                     ;; TODO verify jwt
+                     ;; TODO once we are able to inject a
+                     ;; platform-specific storage capability, use that
+                     ;; to allow the SDK state (or possibly just a
+                     ;; subset, e.g. tokens) to be frozen and thawed
+                     ;; back out
                      (-&gt; sys
                          (assoc-in [:crypto/session :vault/tokens core] decoded-jwt)
                          (assoc-in [:crypto/session :vault/tokens* core] verify-result)))))))))))))</pre>
@@ -188,22 +186,6 @@
 			<tr>
 				<td class="docs">
 					<h2>set-wallet</h2>
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure"></pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					<p>(defn set-wallet   [sys wallet]   (let [wallet-map (lib.wallet/to-edn wallet)]        (if (lib.error/error? wallet-map)          (reject wallet-map)          (resolve (set-wallet sys wallet-map)))))</p>
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure"></pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					<p>(defn set-wallet-js   [sys wallet]   (promise    (fn [resolve reject]      (if-not (lib.wallet/valid? wallet)        (lib.wallet/explain wallet)        (assoc sys :crypto/wallet wallet)))))</p>
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure"></pre>
