deploy: aeb6a2c1ba2b36999736f22b0b0ccbafec503cb5

--- a/com.kubelt.rpc.schema-test.html
+++ b/com.kubelt.rpc.schema-test.html
@@ -111,7 +111,9 @@
                         (-&gt; (rpc/prepare client [:kb :ping] {})
                             (select-keys   [:com.kubelt/type :rpc/path :rpc/method])))
                        &quot;failing ping prepare expectations&quot;)))
-               (catch js/Error err (js/console.log err))
+               (catch js/Error err (do
+                                     (js/console.log err)
+                                     (is false err)))
                (finally (done)))))))</pre>
 				</td>
 			</tr>
